fixed weird spacing at the bottom

--- a/css/style.css
+++ b/css/style.css
@@ -115,3 +115,7 @@ nav div.container-fluid {
     margin-top: 5px;
 }
 
+footer{
+    background-image: ;
+}
+
